<resources>
    <string name="app_name">SimpleMyDot</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="undo">UNDO</string>
    <string name="share_all_content">SHARE SCREEN</string>
    <string name="share">SHARE DOT</string>
    <string name="clear_dot">CLEAR DOT</string>
    <string name="random_dot">RANDOM DOT</string>
    <string name="x_axis">X Axis</string>
    <string name="y_axis">Y Axis</string>
    <string name="size">Size</string>
</resources>
