<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kmitl.lab05.nathapath58070040.simplemydot.MainActivity">



    <kmitl.lab05.nathapath58070040.simplemydot.view.DotView
        android:id="@+id/fragmentDotView"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <Button
            android:id="@+id/btnRandom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/random_dot"
            android:background="#8900b2ff"/>


        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_dot"
            android:background="#89ff6a00"/>

        <Button
            android:id="@+id/btnUndo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/undo"
            android:background="#893c00ff"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">




        <Button
            android:id="@+id/btnShareAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share_all_content"
            android:background="#8908ff00"/>

        <Button
            android:id="@+id/btnShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"
            android:background="#eeff00"/>
    </LinearLayout>

</LinearLayout>