<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kmitl.lab05.nathapath58070040.simplemydot.fragment.EditDotFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:orientation="vertical"
        android:paddingTop="20dp">
        <TextView
            android:id="@+id/sizeTextView"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:gravity="left"
            android:paddingLeft="20dp"
            android:text="@string/size" />
        <SeekBar
            android:id="@+id/sizeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:orientation="vertical"
        android:paddingTop="20dp">
        <TextView
            android:id="@+id/xTextView"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:gravity="left"
            android:paddingLeft="20dp"
            android:text="@string/x_axis" />
        <SeekBar
            android:id="@+id/xSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:orientation="vertical"
        android:paddingTop="20dp">
        <TextView
            android:id="@+id/yTextView"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:gravity="left"
            android:paddingLeft="20dp"
            android:text="@string/y_axis" />
        <SeekBar
            android:id="@+id/ySeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:layout_gravity="bottom">


        <Button
            android:id="@+id/btnChangeColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Change Color" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnCancel"
            android:text="Cancel"
            android:background="#ff0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnOK"
            android:text="OK"
            android:background="#00ff00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
